Show a message after adding a new borrower

--- a/src/biblioteka/templates/biblioteka/borrowers.html
+++ b/src/biblioteka/templates/biblioteka/borrowers.html
@@ -3,6 +3,14 @@
 {% block title %}Clientes{% endblock title %}
 
 {% block content %}
+{% if messages %}
+<ul>
+  {% for message in messages %}
+  <li>{{ message }}</li>
+  {% endfor %}
+</ul>
+{% endif %}
+
 <h1>Clientes</h1>
 
 <p><a href="{% url 'biblioteka:borrowers_new' %}">Novo cliente</a></p>
