Change url scheme
Use 'item/list', 'item/edit', 'item/new' etc.

--- a/src/biblioteka/templates/biblioteka/borrowers/list.html
+++ b/src/biblioteka/templates/biblioteka/borrowers/list.html
@@ -13,7 +13,7 @@
 
 <h1>Clientes</h1>
 
-<p><a href="{% url 'biblioteka:borrowers_new' %}">Novo cliente</a></p>
+<p><a href="{% url 'biblioteka:borrowers/new' %}">Novo cliente</a></p>
 
 {% if borrowers %}
 <table>
