--- a/src/biblioteka/templates/biblioteka/index.html
+++ b/src/biblioteka/templates/biblioteka/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h1>Biblioteka</h1>
-<a href="{% url 'biblioteka:borrowers' %}">Lista de clientes</a>
+<a href="{% url 'biblioteka:borrowers/list' %}">Lista de clientes</a>
 <br>
-<a href="{% url 'biblioteka:borrowers_new' %}">Novo cliente</a>
+<a href="{% url 'biblioteka:borrowers/new' %}">Novo cliente</a>
 {% endblock content %}
