Add a page to list books

--- a/src/biblioteka/templates/biblioteka/index.html
+++ b/src/biblioteka/templates/biblioteka/index.html
@@ -7,4 +7,8 @@
 <a href="{% url 'biblioteka:borrowers/list' %}">Lista de clientes</a>
 <br>
 <a href="{% url 'biblioteka:borrowers/new' %}">Novo cliente</a>
+<br>
+<a href="{% url 'biblioteka:books/list' %}">Livros</a>
+<br>
+<a href="{% url 'biblioteka:books/new' %}">Cadastrar livro</a>
 {% endblock content %}
