Fix typo on html element ID

--- a/src/biblioteka/templates/biblioteka/borrowers/new.html
+++ b/src/biblioteka/templates/biblioteka/borrowers/new.html
@@ -26,7 +26,7 @@
   <input type="email" name="email" id="email" title="Email">
 
   <br>
-  <label for="cep">CEP:</label>
+  <label for="zip_code">CEP:</label>
   <input type="text" name="zip_code" id="zip_code" title="CEP com 8 dígitos" pattern="[0-9]{8}" required>
 
   <br>
