--- a/src/biblioteka/templates/biblioteka/index.html
+++ b/src/biblioteka/templates/biblioteka/index.html
@@ -11,4 +11,6 @@
 <a href="{% url 'biblioteka:books/list' %}">Livros</a>
 <br>
 <a href="{% url 'biblioteka:books/new' %}">Cadastrar livro</a>
+<br>
+<a href="{% url 'biblioteka:loans/list' %}">Empréstimos</a>
 {% endblock content %}
