Add a link to the homepage

--- a/src/biblioteka/templates/biblioteka/books/list.html
+++ b/src/biblioteka/templates/biblioteka/books/list.html
@@ -11,6 +11,8 @@
 </ul>
 {% endif %}
 
+<a href="{% url 'biblioteka:index' %}">Página inicial</a>
+
 <h1>Livros</h1>
 
 <p><a href="{% url 'biblioteka:books/new' %}">Cadastrar livro</a></p>
