--- a/src/biblioteka/templates/biblioteka/borrowers/list.html
+++ b/src/biblioteka/templates/biblioteka/borrowers/list.html
@@ -11,6 +11,8 @@
 </ul>
 {% endif %}
 
+<a href="{% url 'biblioteka:index' %}">Página inicial</a>
+
 <h1>Clientes</h1>
 
 <p><a href="{% url 'biblioteka:borrowers/new' %}">Novo cliente</a></p>
