--- a/src/biblioteka/templates/biblioteka/loans/list.html
+++ b/src/biblioteka/templates/biblioteka/loans/list.html
@@ -11,6 +11,8 @@
 </ul>
 {% endif %}
 
+<a href="{% url 'biblioteka:index' %}">Página inicial</a>
+
 <h1>Empréstimos</h1>
 
 <p><a href="{% url 'biblioteka:books/list' %}">Novo empréstimo</a></p>
