--- a/src/biblioteka/templates/biblioteka/loans/new.html
+++ b/src/biblioteka/templates/biblioteka/loans/new.html
@@ -11,6 +11,8 @@
 </ul>
 {% endif %}
 
+<a href="{% url 'biblioteka:index' %}">Página inicial</a>
+
 <h1>Emprestar livro</h1>
 
 <h2>{{ book.title }}</h2>
